modified k10 after code review

--- a/10_occupy_flask_st/templates/template.html
+++ b/10_occupy_flask_st/templates/template.html
@@ -18,7 +18,7 @@ K10 -- Jinja Tuning
   <body>
     <header>
       {% if head %}
-      <center><h2>{{head}}</h2></center>
+      <center><h2>{{head}}</h2></center> <!-- Taken from Mr. Brown -->
       {% endif %}
     </header>
     <br>
