--- a/13_formation/templates/template.html
+++ b/13_formation/templates/template.html
@@ -10,7 +10,7 @@
     <center>
       <h3>Hi there! Press the button to begin:</h3>
       <br>
-      <form action="/welcome">
+      <form action="/welcome" method="POST">
 	username
 	<input type="text" name="username" style="border:solid; 2px"></input>
 	<br><br>
