--- a/14_login/templates/error.html
+++ b/14_login/templates/error.html
@@ -6,7 +6,7 @@
   <body>
     <center>
       <h3>{{msg}}</h3>
-      <form action="/exit">
+      <form action="/">
 	<input type="submit" name="retry" value="Try again"></input>
       </form>
     </center>
